fix(welcome): Align meeting list at the top when no footer

--- a/css/_welcome_page.scss
+++ b/css/_welcome_page.scss
@@ -233,6 +233,10 @@ body.welcome-page {
         }
     }
 
+    &.without-footer {
+        justify-content: start;
+    }
+
     .welcome-cards-container {
         color:#131519;
         padding-top: 40px;
